--- a/week1/1-bikes-for-refugees/index.html
+++ b/week1/1-bikes-for-refugees/index.html
@@ -99,6 +99,14 @@
             </div>
           </div>
 
+          <div class="boxes">
+            <!-- CONTAINER START -->
+            <div>Check availability</div>
+            <div>Donate bikes</div>
+            <div>Volunteer with us</div>
+          </div>
+          <!-- CONTAINER END -->
+
           <div class="row">
             <div class="col-12">
               <h2 class="heading-underline">Learn more</h2>
@@ -106,7 +114,7 @@
 
             <div class="col-12">
               <div class="row learn_more">
-                <article class="article col-6">
+                <article class="article col-md-6">
                   <div class="container">
                     <h6 class="article__title">
                       Why do refugees need bikes?
@@ -126,7 +134,7 @@
                   </div>
                 </article>
 
-                <article class="article col-6">
+                <article class="article col-md-6">
                   <div class="container">
                     <h6 class="article__title">
                       How can I help?
