--- a/week3/1-website/index.html
+++ b/week3/1-website/index.html
@@ -1,16 +1,257 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Responsive Cake webpage</title>
-    <!-- Add a link to your css file here -->
-</head>
 
-<body>
-    <!-- Add your markup here -->
-</body>
+    <!-- Bootstrap core CSS -->
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 
+    <!-- Custom styles for this template -->
+    <link href="css/heroic-features.css" rel="stylesheet" />
+  </head>
+
+  <body>
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+                    aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+      <div class="container flex-column">
+        <div class="row w-100">
+          <div class="col">
+            <a class="navbar-brand" href="#">ResponsiveCake</a>
+          </div>
+          <div class="col text-md-right">
+            <a class="navbar-brand" href="#">+34 695 59 70 44</a>
+          </div>
+        </div>
+        <div class="row w-100">
+
+          <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ml-auto w-100 justify-content-between">
+              <li class="nav-item active">
+                <a class="nav-link" href="#"
+                  >Home
+                  <span class="sr-only">(current)</span>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Cakes</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Ordering</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Lessons</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </nav>
+
+    <!-- Page Content -->
+    <div class="container mt-4 pt-4">
+      <div class="row my-4 flex-column flex-lg-row">
+            <div class="col col-lg-4">
+                <div class="card h-100">
+                    <img
+                        class="card-img-top"
+                        src="images/Cakes/cupcakes.jpg"
+                        alt=""
+                    />
+                    <div class="card-body">
+                        <h4 class="card-title">Card title</h4>
+                        <p class="card-text">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                        Sapiente esse necessitatibus neque.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col col-lg-8">
+    
+                <div
+                    id="carouselExampleIndicators"
+                    class="carousel slide"
+                    data-ride="carousel">
+                    <ol class="carousel-indicators">
+                      <li
+                        data-target="#carouselExampleIndicators"
+                        data-slide-to="0"
+                        class="active"
+                      ></li>
+                      <li
+                        data-target="#carouselExampleIndicators"
+                        data-slide-to="1"
+                      ></li>
+                      <li
+                        data-target="#carouselExampleIndicators"
+                        data-slide-to="2"
+                      ></li>
+                    </ol>
+                    <div class="carousel-inner" style="height: 400px;">
+                      <div class="carousel-item active">
+                        <img class="d-block w-100" src="images/Cakes/cake-with-blackberries.jpg" alt="First slide" />
+                      </div>
+                      <div class="carousel-item">
+                        <img class="d-block w-100" src="images/Cakes/cake-with-macarons.jpg" alt="Second slide" />
+                      </div>
+                      <div class="carousel-item">
+                        <img class="d-block w-100" src="images/Cakes/cupcakes.jpg" alt="Third slide" />
+                      </div>
+                      <div class="carousel-item">
+                        <img class="d-block w-100" src="images/Cakes/not-technically-a-cake.jpg" alt="Third slide" />
+                      </div>
+                      <div class="carousel-item">
+                        <img class="d-block w-100" src="images/Cakes/wedding-cake.jpg" alt="Third slide" />
+                      </div>
+                    </div>
+                    <a
+                      class="carousel-control-prev"
+                      href="#carouselExampleIndicators"
+                      role="button"
+                      data-slide="prev"
+                    >
+                      <span
+                        class="carousel-control-prev-icon"
+                        aria-hidden="true"
+                      ></span>
+                      <span class="sr-only">Previous</span>
+                    </a>
+                    <a
+                      class="carousel-control-next"
+                      href="#carouselExampleIndicators"
+                      role="button"
+                      data-slide="next"
+                    >
+                      <span
+                        class="carousel-control-next-icon"
+                        aria-hidden="true"
+                      ></span>
+                      <span class="sr-only">Next</span>
+                    </a>
+                  </div>
+                </div>
+            </div>
+        </div>
+      </div>
+
+      <!-- Page Features -->
+      <div class="container">
+      <div class="row text-center">
+        <div class="col-lg-3 col-md-6 mb-4">
+          <div class="card h-100">
+            <img
+              class="card-img-top"
+              src="images/Cakes/cake-with-macarons.jpg"
+              alt=""
+            />
+            <div class="card-body">
+              <h4 class="card-title">Card title</h4>
+              <p class="card-text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Sapiente esse necessitatibus neque.
+              </p>
+            </div>
+            <div class="card-footer">
+              <a href="#" class="btn btn-primary">Find Out More!</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6 mb-4">
+          <div class="card h-100">
+            <img
+              class="card-img-top"
+              src="images/Cakes/cake-with-blackberries.jpg"
+              alt=""
+            />
+            <div class="card-body">
+              <h4 class="card-title">Card title</h4>
+              <p class="card-text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Explicabo magni sapiente, tempore debitis beatae culpa natus
+                architecto.
+              </p>
+            </div>
+            <div class="card-footer">
+              <a href="#" class="btn btn-primary">Find Out More!</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6 mb-4">
+          <div class="card h-100">
+            <img
+              class="card-img-top"
+              src="images/Cakes/not-technically-a-cake.jpg"
+              alt=""
+            />
+            <div class="card-body">
+              <h4 class="card-title">Card title</h4>
+              <p class="card-text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Sapiente esse necessitatibus neque.
+              </p>
+            </div>
+            <div class="card-footer">
+              <a href="#" class="btn btn-primary">Find Out More!</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6 mb-4">
+          <div class="card h-100">
+            <img
+              class="card-img-top"
+              src="images/Cakes/wedding-cake.jpg"
+              alt=""
+            />
+            <div class="card-body">
+              <h4 class="card-title">Card title</h4>
+              <p class="card-text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Explicabo magni sapiente, tempore debitis beatae culpa natus
+                architecto.
+              </p>
+            </div>
+            <div class="card-footer">
+              <a href="#" class="btn btn-primary">Find Out More!</a>
+            </div>
+          </div>
+        </div>
+      </div>
+            </div>
+
+      <!-- /.row -->
+    </div>
+    <!-- /.container -->
+
+    <!-- Footer -->
+    <footer class="py-5 bg-dark">
+      <div class="container">
+        <p class="m-0 text-center text-white">
+          Copyright &copy; Your Website 2020
+        </p>
+      </div>
+      <!-- /.container -->
+    </footer>
+
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
